Fix mobile row spacing o on sponsorship page

--- a/assets/sass/base/_layout.scss
+++ b/assets/sass/base/_layout.scss
@@ -30,6 +30,10 @@
 
 .row--top-40 {
   padding: 2.5em 0;
+
+  @media screen and (max-width: 992px) {
+    padding: 0;
+  }
 }
 
 
